--- a/src/app/features/board/task-modal/task-modal2.scss
+++ b/src/app/features/board/task-modal/task-modal2.scss
@@ -1,22 +1,34 @@
-
 // Contacts Dropdown
 .contacts-dropdown {
   .contact-item {
-    padding: 8px 16px;
+    padding: 7px 16px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
     transition: background-color 0.2s;
+    border-radius: 10px;
 
     &:hover {
-      background: #f4f4f4;
+      background: #eeeeee;
+    }
+
+    &.selected {
+      background: #2a3647;
+
+      &:hover {
+        background: #091931;
+      }
+
+      .contact-info span {
+        color: #ffffff;
+      }
     }
 
     .contact-info {
       display: flex;
       align-items: center;
-      gap: 12px;
+      gap: 16px;
 
       .avatar {
         width: 42px;
@@ -25,21 +37,29 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 14px;
+        font-size: 12px;
         color: #ffffff;
         font-weight: 400;
+        border: 2px solid #ffffff;
       }
 
       span {
         font-size: 20px;
         color: #2a3647;
+        transition: color 0.2s;
       }
     }
 
-    input[type='checkbox'] {
-      width: 20px;
-      height: 20px;
+    .contact-checkbox {
+      width: 24px;
+      height: 24px;
       cursor: pointer;
+      flex-shrink: 0;
+      transition: transform 0.2s ease;
+
+      &:hover {
+        transform: scale(1.1);
+      }
     }
   }
 }
