--- a/src/app/features/board/task-modal/task-modal2.scss
+++ b/src/app/features/board/task-modal/task-modal2.scss
@@ -236,42 +236,66 @@
 .btn-primary {
   border-radius: 10px;
   font-family: 'Inter', sans-serif;
+  font-style: normal;
   cursor: pointer;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 4px;
   transition: all 0.2s;
   border: none;
+  flex: none;
+  flex-grow: 0;
 }
 
 .btn-secondary {
-  width: 126px;
+  box-sizing: border-box;
+  padding: 16px 24px;
+  gap: 10px;
+  width: auto;
   height: 56px;
-  padding: 16px;
+  border: 1px solid #2a3647;
+  border-radius: 10px;
   background: #ffffff;
   color: #2a3647;
-  border: 1px solid #2a3647;
-  font-size: 20px;
   font-weight: 400;
+  font-size: 21px;
+  line-height: 120%;
 
   &:hover {
-    background: #2a3647;
-    color: #ffffff;
+    border-color: #29abe2;
+    color: #29abe2;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  &:active {
+    border-color: #29abe2;
+    color: #29abe2;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 }
 
 .btn-primary {
+  padding: 16px;
+  gap: 4px;
   width: 183px;
   height: 56px;
-  padding: 16px;
   background: #2a3647;
+  border-radius: 10px;
   color: #ffffff;
-  font-size: 21px;
   font-weight: 700;
+  font-size: 21px;
+  line-height: 120%;
 
   &:hover {
     background: #29abe2;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  &:active {
+    background: #091931;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 }
 
