--- a/src/app/features/board/task-modal/task-modal.html
+++ b/src/app/features/board/task-modal/task-modal.html
@@ -230,15 +230,13 @@
         <div class="modal-actions">
           <button type="button" class="btn-secondary" (click)="onClose()">
             Cancel
-            <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
-              <path d="M13 1L1 13M1 1L13 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M17 7L7 17M7 7L17 17" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
             </svg>
           </button>
           <button type="submit" class="btn-primary">
             Create Task
-            <svg width="16" height="12" viewBox="0 0 16 12" fill="none">
-              <path d="M2 6L6 10L14 2" stroke="white" stroke-width="2" stroke-linecap="round" />
-            </svg>
+            <img src="assets/check.png" alt="Check" />
           </button>
         </div>
       </div>
