--- a/src/app/features/board/task-modal/task-modal2.scss
+++ b/src/app/features/board/task-modal/task-modal2.scss
@@ -306,7 +306,7 @@
 
 .required-hint {
   font-family: 'Inter', sans-serif;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 400;
   color: #000000;
   margin: 0;
@@ -342,22 +342,34 @@
 
 .btn-secondary {
   box-sizing: border-box;
-  padding: 16px 24px;
-  gap: 10px;
-  width: auto;
+  padding: 16px;
+  gap: 4px;
+  width: 126px;
   height: 56px;
   border: 1px solid #2a3647;
   border-radius: 10px;
   background: #ffffff;
   color: #2a3647;
   font-weight: 400;
-  font-size: 21px;
+  font-size: 20px;
   line-height: 120%;
+
+  svg {
+    width: 24px;
+    height: 24px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+  }
 
   &:hover {
     border-color: #29abe2;
     color: #29abe2;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    svg {
+      color: #29abe2;
+    }
   }
 
   &:active {
@@ -378,6 +390,14 @@
   font-weight: 700;
   font-size: 21px;
   line-height: 120%;
+
+  img {
+    width: 24px;
+    height: 24px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+  }
 
   &:hover {
     background: #29abe2;
