--- a/src/app/features/board/board-header/board-header.scss
+++ b/src/app/features/board/board-header/board-header.scss
@@ -57,7 +57,9 @@
 @media (max-width: 1024px) {
   .board-header {
     padding: 30px 32px 0;
-    gap: 24px;
+    gap: 0px;
+    flex-direction: column;
+    align-items: flex-start;
 
     h2 {
       font-size: 48px;
@@ -82,16 +84,20 @@
 
 @media (max-width: 768px) {
   .board-header {
-    padding: 20px 24px 0;
-    gap: 16px;
+    // padding: 20px 24px 0;
+    // gap: 16px;
     margin-bottom: 24px;
     height: auto;
     flex-wrap: wrap;
     align-items: flex-start;
 
+
     h2 {
-      font-size: 36px;
+      // font-size: 36px;
       flex: 0 0 auto;
+      flex: 0 0 auto;
+      top: 52px;
+      position: relative;
     }
 
     .mobile-add-task-btn {
@@ -121,11 +127,11 @@
 
 @media (max-width: 480px) {
   .board-header {
-    padding: 0 16px;
-    gap: 16px;
+    // padding: 0 16px;
+    gap: 0px;
 
     h2 {
-      font-size: 28px;
+      // font-size: 28px;
     }
   }
 }
