--- a/src/app/features/board/task-modal/show-task-modal/show-task-modal.scss
+++ b/src/app/features/board/task-modal/show-task-modal/show-task-modal.scss
@@ -34,6 +34,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0px;
+  padding-right: 23px;
   gap: 10px;
   width: 100%;
   align-self: stretch;
