--- a/src/app/features/board/task-modal/show-task-modal/show-task-modal.scss
+++ b/src/app/features/board/task-modal/show-task-modal/show-task-modal.scss
@@ -71,13 +71,13 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  padding: 4px 24px;
+  padding: 4px clamp(11px, 2vw, 24px);
   gap: 10px;
   border-radius: 8px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 23px;
+  font-size: clamp(17px, 3vw, 23px);
   line-height: 120%;
   width: fit-content;
   color: #ffffff;
@@ -468,7 +468,7 @@
   }
 
   .close-btn {
-    top: 16px;
-    right: 16px;
+    top: 0px;
+    right: 0px;
   }
 }
