edit modal close btn from svg to png

--- a/src/app/features/board/task-modal/show-task-modal/edit-task-modal/edit-task-modal.html
+++ b/src/app/features/board/task-modal/show-task-modal/edit-task-modal/edit-task-modal.html
@@ -5,9 +5,7 @@
 
       <div class="modal-header">
         <button class="close-btn" (click)="onClose()">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-            <path d="M18 6L6 18M6 6L18 18" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
-          </svg>
+          <img src="assets/board/close-default-board.png" alt="Close" class="close-arrow" />
         </button>
       </div>
 
